fix: players information ul overflows screen in the bottom
Set max-height of the ul element which represents players list to be equal to 100vh -  sum of nav, footer, and heading's height.

--- a/Football-Tournament/src/components/TeamDetails/team-details.module.css
+++ b/Football-Tournament/src/components/TeamDetails/team-details.module.css
@@ -19,7 +19,7 @@
 .teamDetailsTable {
 	margin: 0 auto;
 	max-width: 600px;
-	max-height: calc(100vh - 184px);
+	max-height: calc(100vh - 264px);
 	overflow: scroll;
 }
 
